--- a/styke.css
+++ b/styke.css
@@ -16,3 +16,28 @@ header{
     height: 40px;
     padding-left: 20px;
 }
+
+
+.lista-produto-single{
+    padding: 10px 0;
+    border-bottom: 1px solid #cccc;
+    display: flex;
+}
+
+.lista-produto-single h3{
+    flex: 1;
+    padding:0 20px;
+}
+
+h3.price-produto{
+    text-align: right;
+    font-size: 20px;
+    
+}
+
+h3.price-produto > span{
+  background-color: red;  
+  padding: 8px 10px;
+  border-radius: 50% ;
+  color: white;
+}
