--- a/styke.css
+++ b/styke.css
@@ -20,6 +20,7 @@ header{
 
 .lista-produto-single{
     padding: 10px 0;
+    margin: 20px 0;
     border-bottom: 1px solid #cccc;
     display: flex;
 }
